# Royal-Jaguar-3

./: CMakeLists.txt  README.md
Test-Client/: CMakeLists.txt
Test-Client/src/: main.cpp
include/Royal-Jaguar-3/: JsonTools.cpp
include/glew-2.1.0/: glew.pc
include/glfw-3.3.2/src/: input.c
include/glfw-3.3.2/tests/: empty.c
include/glm-master/: CMakeLists.txt
include/glm-master/include/glm/: CMakeLists.txt
spike/: Scene.cpp  Scene.h  TextRender.cpp  TextRender.h  notes.txt  serialisation.txt
spike/version-1/src/: BaseRender.cpp  GameObject.cpp  GameObject.h  ResourceManager.cpp  ShaderProgram.cpp  SpriteRender.h  SystemControl.h  TextRender.h
spike/version-1/src/resources/data/: StartGame.json
spike/version-1/src/resources/shaders/: sprite.frag
spike/version-2/core/: Game.cpp  Network.cpp
spike/version-2/include/core/: Game.h  Memory.h  Network.h
spike/version-2/include/objects/: Player.h
spike/version-2/objects/: Player.cpp
spike/version-3/src/core/: Input.cpp  Memory.cpp  Network.cpp  Scene.cpp
spike/version-3/src/graphics/: Window.cpp
spike/version-3/src/include/core/: Game.h  Memory.h  Scene.h
spike/version-3/src/include/objects/: Object.h
src/: BaseRender.h  GameObject.cpp  GameObject.h  JsonTools.cpp  JsonTools.h  Network.cpp  Network.h  ResourceManager.h  ShaderProgram.cpp  ShaderProgram.h  SpriteRender.cpp  SpriteRender.h  SystemControl.cpp  SystemControl.h  TextRender.cpp  TextRender.h  Window.cpp  Window.h
src/client/src/core/: Loop.cpp
src/client/src/include/core/: Loop.h
src/core/: Game.cpp  Input.cpp  Memory.cpp  Network.cpp  Scene.cpp
src/include/core/: Game.h  Input.h  Memory.h  Network.h  Scene.h
src/include/objects/: Card.h  Deck.h  Empty.h  Object.h  Player.h
src/objects/: Card.cpp  Deck.cpp  Empty.cpp  Player.cpp
src/resources/data/: HostGame.json  Index.json  MainMenu.json  Mouse.json  StartGame.json  test.json
src/resources/shaders/: glyph.vert
src/server/src/core/: Main.cpp
src/server/src/include/core/: Main.h
